--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,7 @@
     line-height: 1.4283;
 /*    font-family: 'Trispace', sans-serif; */
     font-family: 'M PLUS Rounded 1c', sans-serif;
-    background: black;
+    background: radial-gradient(#333, #000);
     min-height: 100vh;
     display: flex;
     flex-flow: column;
